Toastr Notification Added

--- a/Components/_Imports.razor
+++ b/Components/_Imports.razor
@@ -9,3 +9,6 @@
 @using Microsoft.JSInterop
 @using SwiftCart
 @using SwiftCart.Components
+@using SwiftCart.Repository.IRepository
+@using SwiftCart.Data
+@using SwiftCart.Services.Extensions
