--- a/Components/_Imports.razor
+++ b/Components/_Imports.razor
@@ -12,3 +12,4 @@
 @using SwiftCart.Repository.IRepository
 @using SwiftCart.Data
 @using SwiftCart.Services.Extensions
+@using SwiftCart.Components.Shared
