--- a/Components/Pages/Category_Pages/CategoryUpsert.razor
+++ b/Components/Pages/Category_Pages/CategoryUpsert.razor
@@ -15,7 +15,7 @@ else
 {
 
     <div class="card shadow border-0 mt-4">
-        <div class="card-haeder bg-black bg-gradient m-lg-0 py-3">
+        <div class="card-header bg-black bg-gradient m-lg-0 py-3">
             <div class="row">
                 <div class="col-12 text-center">
                     <h2 class="py-2 text-white"> @(Id==0?"Create":"Update") Category</h2>
