--- a/Components/Pages/Category_Pages/CategoryUpsert.razor
+++ b/Components/Pages/Category_Pages/CategoryUpsert.razor
@@ -18,7 +18,7 @@ else
         <div class="card-header bg-black bg-gradient m-lg-0 py-3">
             <div class="row">
                 <div class="col-12 text-center">
-                    <h2 class="py-2 text-white"> @(Id==0?"Create":"Update") Category</h2>
+                    <h2 class="py-2 text-white"> @(Id == 0 ? "Create" : "Update") Category</h2>
                 </div>
             </div>
         </div>
@@ -38,14 +38,14 @@ else
                     <div class="row mt-3">
                         <div class="col-6 col-md-3">
                             <button type="submit" class="btn btn-primary form-control" disabled="@IsProcessing">
-                                <i class="bi bi-floppy2-fill"></i> 
-                                Update    
+                                <i class="bi bi-floppy2-fill"></i>
+                                @(Id==0?"Create":"Update") 
                             </button>
                         </div>
                         <div class="col-6 col-md-3">
                             <a href="category" class="btn btn-secondary form-control" disabled="@IsProcessing">
-                                <i class="bi bi-arrow-bar-left"></i> 
-                                Back to List    
+                                <i class="bi bi-arrow-bar-left"></i>
+                                Back to List
                             </a>
                         </div>
                     </div>
@@ -95,7 +95,7 @@ else
     private async Task UpsertCategory()
     {
         IsProcessing = true;
-        if(Category.Id == 0)
+        if (Category.Id == 0)
         {
             // Create new category
             await _categoryRepository.CreateAsync(Category);
