--- a/Components/Pages/Product_Pages/ProductUpsert.razor
+++ b/Components/Pages/Product_Pages/ProductUpsert.razor
@@ -5,7 +5,6 @@
 @inject NavigationManager _navigationManager
 @inject IJSRuntime _JS
 
-
 @if (IsProcessing)
 {
     <div class="position-absolute w-75 h-75 d-flex flex-column align-items-center bg-white justify-content-center">
@@ -63,8 +62,8 @@ else
                     <div class="row mt-3">
                         <div class="col-6 col-md-3">
                             <button type="submit" class="btn btn-primary form-control" disabled="@IsProcessing">
-                                <i class="bi bi-floppy2-fill"></i> 
-                                Update    
+                                <i class="bi bi-floppy2-fill"></i>
+                                @(Id == 0 ? "Create" : "Update") 
                             </button>
                         </div>
                         <div class="col-6 col-md-3">
