Refined the Register and Login pages

--- a/Components/Pages/Product_Pages/ProductList.razor
+++ b/Components/Pages/Product_Pages/ProductList.razor
@@ -47,11 +47,15 @@ else
                     <tbody>
                         @foreach (var obj in Products)
                         {
-                            Console.WriteLine(JsonSerializer.Serialize(obj));
+                            @* Console.WriteL   ine(JsonSerializer.Serialize(obj)); *@
                             <tr>
                                 <td>@obj.Name</td>
                                 <td>@obj.Price.ToString("C", CultureInfo.GetCultureInfo("en-us")) </td>
-                                <td>@obj.SpecialTag</td>
+                                <td>
+                                    <span class="badge text-bg-info">
+                                        @obj.SpecialTag
+                                    </span>
+                                </td>
                                 <td>@obj.Category.Name</td>
 
                                 <td>
