--- a/Components/Layout/MainLayout.razor
+++ b/Components/Layout/MainLayout.razor
@@ -1,6 +1,16 @@
-﻿@inherits LayoutComponentBase
+﻿@using SwiftCart.Utility
+@inherits LayoutComponentBase
 
 <div class="page bg-danger-subtle">
+    @* <AuthorizeView>
+        Any Authorized User
+    </AuthorizeView>
+    <AuthorizeView Roles="@SD.Role_Admin" >
+        ADMIN
+    </AuthorizeView>
+    <AuthorizeView Roles="@SD.Role_Customer">
+        CUSTOMER
+    </AuthorizeView> *@
     <div class="sidebar">
         <NavMenu />
     </div>
