--- a/Components/Pages/Product_Pages/ProductUpsert.razor
+++ b/Components/Pages/Product_Pages/ProductUpsert.razor
@@ -3,6 +3,7 @@
 @inject IProductRepository _productRepository
 @inject ICategoryRepository _categoryRepository
 @inject NavigationManager _navigationManager
+@inject IWebHostEnvironment _webHostEnvironment
 @inject IJSRuntime _JS
 
 @if (IsProcessing)
@@ -18,7 +19,7 @@ else
         <div class="card-header bg-black bg-gradient m-lg-0 py-3">
             <div class="row">
                 <div class="col-12 text-center">
-                    <h2 class="py-2 text-white"> @(Id==0?"Create":"Update") Product</h2>
+                    <h2 class="py-2 text-white"> @(Id == 0 ? "Create" : "Update") Product</h2>
                 </div>
             </div>
         </div>
@@ -42,13 +43,19 @@ else
                     </div>
 
                     <div class="form-floating mb-3 col-12">
+                        <InputText @bind-Value="Product.SpecialTag" class="form-control" id="SpTag" placeholder="" />
+                        <label for="SpTag">Sepcial Tag</label>
+                        <ValidationMessage For="@(() => Product.SpecialTag)" />
+                    </div>
+
+                    <div class="form-floating mb-3 col-12">
                         <InputNumber @bind-Value="Product.Price" class="form-control" id="Price" placeholder="" />
                         <label for="Price">Price</label>
                         <ValidationMessage For="@(() => Product.Price)" />
                     </div>
 
                     <div class="form-floating mb-3 col-12">
-                        <InputSelect @bind-Value="Product.CategoryId" class="form-select" id="Category" placeholder="" >
+                        <InputSelect @bind-Value="Product.CategoryId" class="form-select" id="Category" placeholder="">
                             <option value="0" disabled selected>---Choose a Category---</option>
                             @foreach (var category in _categories)
                             {
@@ -59,17 +66,41 @@ else
                         <ValidationMessage For="@(() => Product.CategoryId)" />
                     </div>
 
+                    <div class="form-floating mb-3 col-12">
+
+                        @if(Product.ImageUrl == null)
+                        {
+                            
+                        <InputFile OnChange="LoadFiles" class="form-control" id="customFile" accept="image/x-png,image/jpeg"></InputFile>
+                        <label for="customFile">Upload Image</label>
+
+                        }
+
+                        @if (Product.ImageUrl != null)
+                        {
+                            <div class="row">
+                                <div class="col-3">
+                                    <img src="@Product.ImageUrl" alt="Product Image" class="img-thumbnail" />
+                                </div>
+                                <div class="col-md-9">
+                                    <i class="bi bi-trash btn btn-outline-danger" @onclick="DeleteImage">Remove </i>
+                                </div>
+                            </div>
+                        }
+
+                    </div>
+
                     <div class="row mt-3">
                         <div class="col-6 col-md-3">
                             <button type="submit" class="btn btn-primary form-control" disabled="@IsProcessing">
                                 <i class="bi bi-floppy2-fill"></i>
-                                @(Id == 0 ? "Create" : "Update") 
+                                @(Id == 0 ? "Create" : "Update")
                             </button>
                         </div>
                         <div class="col-6 col-md-3">
                             <a href="product" class="btn btn-secondary form-control" disabled="@IsProcessing">
-                                <i class="bi bi-arrow-bar-left"></i> 
-                                Back to List    
+                                <i class="bi bi-arrow-bar-left"></i>
+                                Back to List
                             </a>
                         </div>
                     </div>
@@ -88,16 +119,22 @@ else
 
     [Parameter] public int Id { get; set; }
     [SupplyParameterFromForm] private Product Product { get; set; } = new Product();
-    private bool IsProcessing { get; set; } = true;
 
     private IEnumerable<Category> _categories { get; set; } = new List<Category>();
 
+    private string? _directoryPath { get; set; }
+    private bool IsProcessing { get; set; } = true;
+
+    protected override Task OnInitializedAsync()
+    {
+        _directoryPath = Path.Combine(_webHostEnvironment.WebRootPath, "images", "Product");
+        return base.OnInitializedAsync();
+    }
 
     protected override async Task OnAfterRenderAsync(bool firstRender)
     {
         if (firstRender)
         {
-
             await LoadProductAndCategoryList();
             IsProcessing = false;
 
@@ -117,7 +154,7 @@ else
     private async Task UpsertProduct()
     {
         IsProcessing = true;
-        if(Product.Id == 0)
+        if (Product.Id == 0)
         {
             // Create new product
             await _productRepository.CreateAsync(Product);
@@ -132,6 +169,49 @@ else
 
         IsProcessing = false;
         _navigationManager.NavigateTo("product");
+    }
+
+    private async Task LoadFiles(InputFileChangeEventArgs e)
+    {
+        IsProcessing = true;
+        var file = e.File;
+        FileInfo fileInfo = new(file.Name);
+        var newFileName = $"{Guid.NewGuid()}.{fileInfo.Extension}";
+
+        if (!Directory.Exists(_directoryPath))
+        {
+            Directory.CreateDirectory(_directoryPath);
+        }
+
+        var path = Path.Combine(_directoryPath, newFileName);
+
+        // await using FileStream fileStream = new(path, FileMode.Create);
+        // await file.OpenReadStream(file.Size).CopyToAsync(fileStream);
+
+        var maxSize = 10 * 1024 * 1024;
+        await using var stream = file.OpenReadStream(maxSize);
+        await using var fileStream = new FileStream(path, FileMode.Create);
+        await stream.CopyToAsync(fileStream);
+
+        Product.ImageUrl = $"/images/product/{newFileName}";
+
+        IsProcessing = false;
+    }
+
+    void DeleteImage()
+    {
+        if (Product.ImageUrl == null)
+            return;
+
+        var fileToDelete = Product.ImageUrl.Split('/').Reverse().First();
+        var filePathToDelete = Path.Combine(_directoryPath, fileToDelete);
+
+        if (!File.Exists(filePathToDelete))
+            return;
+
+        File.Delete(filePathToDelete);
+        Product.ImageUrl = null;
+
     }
 
 }
