--- a/Components/Pages/Home.razor
+++ b/Components/Pages/Home.razor
@@ -1,7 +1,112 @@
 ﻿@page "/"
+@inject IProductRepository _productRepository
+@inject ICategoryRepository _categoryRepository
+@using System.Globalization
+
 
 <PageTitle>Home</PageTitle>
 
-<h1>Hello, world!</h1>
 
-Welcome to your new app.
+@if (IsProcessing)
+{
+    <div class="position-absolute w-100 vh-100 d-flex flex-column align-items-center bg-white justify-content-center">
+        <img src="/images/loading.gif" alt="loading" />
+    </div>
+}
+else
+{
+
+    <div class="container-fluid px-0 m-0 full-width">
+        <div class="jumbotron-custom">
+            <div class="m-auto d-flex align-items-center" style="width: 400px; height: 50vh;">
+
+                <div class="d-flex align-items-center" style="width: 100%;">
+                    <input type="text" class="form-control rounded-pill"
+                           placeholder="Search for Food Items!"
+                           style="width: 100%; padding: 20px;">
+                    <span style="position: relative; left: -43px;"><i class="bi bi-search"></i></span>
+                </div>
+            </div>
+        </div>
+
+        <div class="content px-4 m-2">
+
+            <ul class="nav nav-underline justify-content-center mb-2">
+
+                <li class="nav-item">
+                    <span class="nav-link" href="#" style="cursor: pointer">All</span>
+                </li>
+                @foreach (var cat in Categories)
+                {
+                    <li class="nav-item">
+                        <span class="nav-link" href="#" style="cursor: pointer">@cat.Name</span>
+                    </li>
+                }
+            </ul>
+            <div class="row mt-4 mx-1">
+
+                @foreach (var prod in Products)
+                {
+
+                    <div class="col-12 col-md-6 col-lg-4 pe-3 mb-5">
+                        <div class="card">
+                            <div class="mt-3 mb-2 row">
+                                <div class="col-6 px-4">
+                                    @if (!string.IsNullOrEmpty(prod.SpecialTag))
+                                    {
+                                        <i class="bi bi-star btn btn-outline-success disabled"> @prod.SpecialTag</i>
+                                    }
+                                </div>
+                                <div class="col-6 text-end text-danger h3 px-4">
+                                    @prod.Price.ToString("C", CultureInfo.GetCultureInfo("en-us"))
+                                </div>
+                            </div>
+                            <div class="text-center">
+                                @if (!string.IsNullOrEmpty(prod.ImageUrl))
+                                {
+                                    <img class="card-img-top img-thumbnail img-rounded w-50 mt-2" src="@prod.ImageUrl" style="">
+                                }
+                                else
+                                {
+                                    <img class="card-img-top img-thumbnail img-rounded w-50 mt-2" src="images/default.png" style="">
+                                }
+                            </div>
+                            <div class="card-body">
+                                <h5 class="card-title text-center lead text-success">@prod.Name</h5>
+                                <p class="card-text mt-2"> @((MarkupString)prod.Description)</p>
+                                <h4 class="text-center">
+                                    <i class="bi bi-cart3 btn btn-success text-right form-control px-5"> Add to cart</i>
+                                </h4>
+
+                            </div>
+                        </div>
+                    </div>
+                }
+            </div>
+        </div>
+    </div>
+}
+
+@code {
+    private IEnumerable<Product> Products = new List<Product>();
+    private IEnumerable<Category> Categories = new List<Category>();
+    private bool IsProcessing { get; set; } = true;
+
+    protected override async Task OnAfterRenderAsync(bool firstRender)
+    {
+        if (firstRender)
+        {
+            await LoadProductsAndCategories();
+            IsProcessing = false;
+            StateHasChanged(); // Trigger a re-render after loading products
+        }
+    }
+
+    private async Task LoadProductsAndCategories()
+    {
+        Products = await _productRepository.GetAllAsync();
+        Categories = await _categoryRepository.GetAllAsync();
+    }
+
+
+}
