--- a/Components/Pages/Home.razor.css
+++ b/Components/Pages/Home.razor.css
@@ -1,6 +1,6 @@
-html, body {
-/*    height: 100%;*/
-    background-color: salmon;
+﻿html, body {
+/*        height: 100%;*/
+    background-color: lawngreen;
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
@@ -15,7 +15,7 @@ a, .btn-link {
 }
 
 .btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
-  box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
+    box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
 }
 
 .content {
@@ -52,13 +52,35 @@ h1:focus {
     border-color: #929292;
 }
 
-.form-floating > .form-control-plaintext::placeholder, .form-floating > .form-control::placeholder {
-    color: var(--bs-secondary-color);
-    text-align: end;
+
+.jumbotron-custom {
+    background: linear-gradient(to right, #2c536499, #203a4399, #0f202799), url(https://dotnetmasteryimages.blob.core.windows.net/yumblazor/searchImage.jpg) center;
+    background-size: cover;
+    width: 100%;
+    height: 50vh;
+    overflow: hidden;
 }
 
-.form-floating > .form-control-plaintext:focus::placeholder, .form-floating > .form-control:focus::placeholder {
-    text-align: start;
+.img-rounded {
+    border-radius: 50%;
 }
 
+span.nav-link {
+    color: #212529 !important;
+}
+
+.nav-link:focus, .nav-link:hover {
+    color: #212529;
+}
+
+span.nav-link.active {
+    border-bottom: 3px solid #198754;
+    color: #198754 !important;
+}
+
+
+
+.mark-up-string * {
+    background: transparent !important;
+}
 
