--- a/Components/Pages/Category_Pages/CategoryList.razor
+++ b/Components/Pages/Category_Pages/CategoryList.razor
@@ -10,7 +10,7 @@
 
 @if (IsProcessing)
 {
-    <div class="position-absolute w-75 h-75 d-flex flex-column align-items-center bg-white justify-content-center">
+    <div class="position-absolute w-100 vh-100 d-flex flex-column align-items-center bg-white justify-content-center">
         <img src="/images/loading.gif" alt="loading" />
     </div>
 }
