Shopping Cart Updated - Add Cart Functionality Working

--- a/wwwroot/app.css
+++ b/wwwroot/app.css
@@ -1,6 +1,6 @@
 html, body {
 /*    height: 100%;*/
-    background-color: salmon;
+    background-color: cornflowerblue;
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
