--- a/Components/Pages/Home.razor
+++ b/Components/Pages/Home.razor
@@ -1,7 +1,11 @@
 ﻿@page "/"
+@using System.Globalization
+@inject AuthenticationStateProvider _AuthenticationStateProvider
+@inject IJSRuntime _JS
+@inject NavigationManager _NavigationManager
 @inject IProductRepository _productRepository
 @inject ICategoryRepository _categoryRepository
-@using System.Globalization
+@inject IShoppingCartRepository _cartRepository
 
 
 <PageTitle>Home</PageTitle>
@@ -50,13 +54,13 @@ else
                 {
 
                     <div class="col-12 col-md-6 col-lg-4 pe-3 mb-5">
-                        <div class="card">
+                        <div class="card bg-primary-subtle">
                             <div class="mt-3 mb-2 row">
                                 <div class="col-6 px-4">
                                     @if (!string.IsNullOrEmpty(prod.SpecialTag))
                                     {
                                         <i class="bi bi-star btn btn-outline-success disabled"> @prod.SpecialTag</i>
-                                    }
+                                    } 
                                 </div>
                                 <div class="col-6 text-end text-danger h3 px-4">
                                     @prod.Price.ToString("C", CultureInfo.GetCultureInfo("en-us"))
@@ -76,7 +80,9 @@ else
                                 <h5 class="card-title text-center lead text-success">@prod.Name</h5>
                                 <p class="card-text mt-2"> @((MarkupString)prod.Description)</p>
                                 <h4 class="text-center">
+                                    <div class="m-lg-auto p-2" @onclick="()=>AddOrderItem(prod)">
                                     <i class="bi bi-cart3 btn btn-success text-right form-control px-5"> Add to cart</i>
+                                    </div>
                                 </h4>
 
                             </div>
@@ -152,4 +158,35 @@ else
     {
         return categoryId == _selectedCategoryId ? "active" : string.Empty;
     }
+
+    private async Task AddOrderItem(Product product)
+    {
+        var authState = await _AuthenticationStateProvider.GetAuthenticationStateAsync();
+        var user = authState.User;
+        var authenticated = user.Identity?.IsAuthenticated ?? false;
+
+        if (!authenticated)
+        {
+            _NavigationManager.NavigateTo("/Account/Login", forceLoad: true);
+
+        }
+        else
+        {
+            // Add Item to Cart
+            var result = await 
+                        _cartRepository.UpdateCartAsync(user.FindFirst(u => u.Type.Contains("nameidentifier"))?.Value, product.Id, 1);
+
+            if (result)
+            {
+                _JS.ToastrSuccess("Product added to cart successfully!"); 
+            }
+            else
+            {
+                _JS.ToastrError("Failed to add product to cart. Please try again.");
+            }
+
+        }
+
+    }
+
 }
