--- a/Components/Pages/Cart_Pages/Cart.razor
+++ b/Components/Pages/Cart_Pages/Cart.razor
@@ -2,8 +2,11 @@
 @using Microsoft.AspNetCore.Authorization
 @using System.Security.Claims
 @using System.Globalization
+@using SwiftCart.Utility
 @inject AuthenticationStateProvider _AuthenticationStateProvider
 @inject IShoppingCartRepository _cartRepository
+@inject IOrderRepository _orderRepository
+@inject NavigationManager _navigationManager
 @attribute [Authorize]
 
 @if (IsProcessing)
@@ -134,6 +137,7 @@ else
         var user = authState.User;
         OrderHeader.Email = user.FindFirst(claim => claim.Type == ClaimTypes.Email)?.Value ?? string.Empty;
         OrderHeader.UserId = user.FindFirst(claim => claim.Type == ClaimTypes.NameIdentifier)?.Value ?? string.Empty;
+        OrderHeader.Status = SD.StatusPending;
     }
 
 
@@ -173,14 +177,18 @@ else
 
     private async Task UpdateCartItem(int productId, int updateBy)
     {
-
         var result = await _cartRepository.UpdateCartAsync(OrderHeader.UserId, productId, updateBy);
         await LoadCart();
-
     }
 
     private async Task ProcessOrderCreation()
     {
+        IsProcessing = true;
+        await Task.Yield();// Ensure the UI updates before processing
+        OrderHeader.OrderDetails = SD.ConvertShoppingCartToOrderDetails(ShoppingCarts.ToList());
+
+        await _orderRepository.CreateAsync(OrderHeader);
+        _navigationManager.NavigateTo($"/order/confirmation/{OrderHeader.Id}");
 
     }
 
