--- a/Components/Layout/NavBar.razor
+++ b/Components/Layout/NavBar.razor
@@ -1,4 +1,10 @@
-﻿<nav class="navbar navbar-expand-md navbar-dark bg-dark pb-4 pt-4">
+﻿@using SwiftCart.Services
+@using System.Security.Claims
+@inject AuthenticationStateProvider _AuthenticationStateProvider
+@inject SharedStateService _sharedStateService
+@inject IShoppingCartRepository _shoppingCartRepository
+
+<nav class="navbar navbar-expand-md navbar-dark bg-dark pb-4 pt-4">
     <div class="container-fluid">
         <a class="navbar-brand" href="">
             <img src="/images/Logo.png" alt="Bootstrap" width="30" height="24">
@@ -11,13 +17,13 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav me-auto mb-2 mb-md-0">
                 <li class="nav-item mx-2">
-                    <NavLink class="nav-link" href="">
+                    <NavLink class="nav-link" href="/" Match="NavLinkMatch.All">
                         <span class="bi bi-house-door" aria-hidden="true"></span> Home
                     </NavLink>
                 </li>
                 <li class="nav-item mx-2">
                     <NavLink class="nav-link" href="/cart">
-                        <span class="bi bi-cart3" aria-hidden="true"></span> Cart
+                        <span class="bi bi-cart3" aria-hidden="true"></span> Cart @(_sharedStateService.TotalCartCount > 0 ? $"({_sharedStateService.TotalCartCount})" : "")
                     </NavLink>
                 </li>
                 <li class="nav-item mx-2">
@@ -63,3 +69,35 @@
         </div>
     </div>
 </nav>
+
+
+@code {
+
+    protected override async Task OnInitializedAsync()
+    {
+        _sharedStateService.OnChange += OnSharedStateChange;
+        await GetInitialCount();
+    }
+
+    private void OnSharedStateChange()
+    {
+        InvokeAsync(StateHasChanged);
+    }
+
+    public async Task GetInitialCount()
+    {
+        var authState = await _AuthenticationStateProvider.GetAuthenticationStateAsync();
+        var user = authState.User;
+
+        _sharedStateService.TotalCartCount = await _shoppingCartRepository.GetTotalCartCountAsync(user?.FindFirst(claim => claim.Type == ClaimTypes.NameIdentifier)?.Value);
+
+
+    }
+
+    public void Dispose()
+    {
+        _sharedStateService.OnChange -= OnSharedStateChange;
+    }
+
+
+}
