--- a/Components/Account/Shared/ExternalLoginPicker.razor
+++ b/Components/Account/Shared/ExternalLoginPicker.razor
@@ -9,25 +9,42 @@
 {
     <div>
         <p>
-            There are no external authentication services configured. See this <a href="https://go.microsoft.com/fwlink/?LinkID=532715">article
-            about setting up this ASP.NET application to support logging in via external services</a>.
+            There are no external authentication services configured. See this <a href="https://go.microsoft.com/fwlink/?LinkID=532715">
+                article
+                about setting up this ASP.NET application to support logging in via external services
+            </a>.
         </p>
     </div>
 }
 else
 {
-    <form class="form-horizontal" action="Account/PerformExternalLogin" method="post">
-        <div>
+    <div class="d-grid gap-2">
+
+        <form class="form-horizontal" action="Account/PerformExternalLogin" method="post">
             <AntiforgeryToken />
             <input type="hidden" name="ReturnUrl" value="@ReturnUrl" />
-            <p>
-                @foreach (var provider in externalLogins)
-                {
-                    <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
-                }
-            </p>
-        </div>
-    </form>
+            <div class="d-grid gap-2">
+    @foreach (var provider in externalLogins)
+    {
+        var iconClass = provider.Name switch
+        {
+            "Google" => "bi bi-google",
+            "Microsoft" => "bi bi-microsoft",
+            _ => "bi bi-box-arrow-in-right"
+        };
+
+        <button type="submit" class="btn btn-outline-dark d-flex align-items-center justify-content-center gap-2"
+                name="provider" value="@provider.Name"
+                title="Log in using your @provider.DisplayName account">
+            <i class="@iconClass fs-5"></i>
+            <span class="d-none d-sm-inline">
+                Connect with @provider.DisplayName
+            </span>
+        </button>
+    }
+</div>
+        </form>
+    </div>
 }
 
 @code {
