--- a/Components/Pages/Cart_Pages/Cart.razor
+++ b/Components/Pages/Cart_Pages/Cart.razor
@@ -8,6 +8,7 @@
 @inject IShoppingCartRepository _cartRepository
 @inject IOrderRepository _orderRepository
 @inject NavigationManager _navigationManager
+@inject PaymentService _paymentService
 @inject SharedStateService _sharedStateService
 @attribute [Authorize]
 
@@ -190,8 +191,11 @@ else
         await Task.Yield();// Ensure the UI updates before processing
         OrderHeader.OrderDetails = SD.ConvertShoppingCartToOrderDetails(ShoppingCarts.ToList());
 
+        var session = _paymentService.CreateStripeCheckoutSession(OrderHeader);
+        OrderHeader.SessionId = session.Id;
+
         await _orderRepository.CreateAsync(OrderHeader);
-        _navigationManager.NavigateTo($"/order/confirmation/{OrderHeader.Id}");
+        _navigationManager.NavigateTo(session.Url);
 
     }
 
