--- a/Components/Pages/Category_Pages/CategoryUpsert.razor
+++ b/Components/Pages/Category_Pages/CategoryUpsert.razor
@@ -1,8 +1,12 @@
 ﻿@page "/category/create"
 @page "/category/update/{id:int}"
+@using Microsoft.AspNetCore.Authorization
+@using SwiftCart.Utility
 @inject ICategoryRepository _categoryRepository
 @inject NavigationManager _navigationManager
 @inject IJSRuntime _JS
+
+@attribute [Authorize(Roles = SD.Role_Admin)]
 
 
 @if (IsProcessing)
