--- a/Components/Pages/Product_Pages/ProductList.razor
+++ b/Components/Pages/Product_Pages/ProductList.razor
@@ -1,8 +1,14 @@
 ﻿@page "/product"
 @using System.Globalization
 @using System.Text.Json
+@using Microsoft.AspNetCore.Authorization
+@using SwiftCart.Utility
+
+
 @inject IProductRepository _productRepository
 @inject IJSRuntime _JS
+@attribute [Authorize(Roles = SD.Role_Admin)]
+
 
 <BsModal OnModalConfirmation="ConfirmDeleteClick" ButtonBootStrapStyle="btn-danger"
          ButtonText="Delete"
@@ -73,6 +79,7 @@ else
 
 
 @code {
+
     private bool IsProcessing { get; set; } = true;
     private IEnumerable<Product> Products { get; set; } = new List<Product>();
     private int DeleteProductId { get; set; } = 0;
