--- a/Components/Pages/Product_Pages/ProductUpsert.razor
+++ b/Components/Pages/Product_Pages/ProductUpsert.razor
@@ -1,10 +1,16 @@
 ﻿@page "/product/create"
 @page "/product/update/{id:int}"
+@using Microsoft.AspNetCore.Authorization
+@using SwiftCart.Utility
+
 @inject IProductRepository _productRepository
 @inject ICategoryRepository _categoryRepository
 @inject NavigationManager _navigationManager
 @inject IWebHostEnvironment _webHostEnvironment
 @inject IJSRuntime _JS
+
+@attribute [Authorize(Roles = SD.Role_Admin)]
+
 
 @if (IsProcessing)
 {
